Update OSS pom with new plugins, new Maven version and use Java 11 minimum